# diffwhisperer

./: README.md  pyproject.toml
diffwhisperer/: __init__.py  analyzer.py  cli.py
